fix: z-index nav hamburger

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -503,6 +503,7 @@ $duration: 30s;
   nav#hamburger {
     background-color: #222222;
     position:fixed;
+    z-index: 100;
     top:0;
     left:0;
     width:100%;
@@ -600,6 +601,7 @@ $duration: 30s;
       position: fixed;
       top: 4rem;
       right: 6rem;
+      z-index: 101;
 
     body {
       opacity: 0.5;
